--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
   namespace 'com.noumenon.template'
-  compileSdk 32
+  compileSdk 33
 
   defaultConfig {
     applicationId "com.noumenon.template"
     minSdk 28
-    targetSdk 32
+    targetSdk 33
     versionCode 1
     versionName "1.0"
 
@@ -27,17 +27,17 @@ android {
     }
   }
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
   }
   kotlinOptions {
-    jvmTarget = '1.8'
+    jvmTarget = '11'
   }
   buildFeatures {
     compose true
   }
   composeOptions {
-    kotlinCompilerExtensionVersion '1.1.1'
+    kotlinCompilerExtensionVersion '1.3.2'
   }
   packagingOptions {
     resources {
@@ -48,12 +48,12 @@ android {
 
 dependencies {
 
-  implementation 'androidx.core:core-ktx:1.7.0'
-  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-  implementation 'androidx.activity:activity-compose:1.3.1'
+  implementation 'androidx.core:core-ktx:1.9.0'
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+  implementation 'androidx.activity:activity-compose:1.6.0'
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-  implementation 'androidx.compose.material3:material3:1.0.0-alpha02'
+  implementation 'androidx.compose.material3:material3:1.0.0-beta03'
   testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
