--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,12 +48,15 @@ android {
 
 dependencies {
 
-  implementation 'androidx.core:core-ktx:1.9.0'
+  // Androidx
+  implementation "androidx.core:core-ktx:$androidx_version"
   implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+  // Compose
   implementation 'androidx.activity:activity-compose:1.6.0'
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-  implementation 'androidx.compose.material3:material3:1.0.0-beta03'
+  implementation 'androidx.compose.material3:material3:1.0.0-rc01'
+  // Test
   testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
