--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
   ext {
     compose_version = '1.2.1'
+    androidx_version = '1.9.0'
   }
 } // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
