--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,14 +52,14 @@ dependencies {
   implementation "androidx.core:core-ktx:$androidx_version"
   implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
   // Compose
-  implementation 'androidx.activity:activity-compose:1.6.0'
+  implementation 'androidx.activity:activity-compose:1.6.1'
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-  implementation 'androidx.compose.material3:material3:1.0.0-rc01'
+  implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
   // Test
   testImplementation 'junit:junit:4.13.2'
-  androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+  androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
   androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
   debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
   debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
