--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
   ext {
-    compose_version = '1.2.1'
+    compose_version = '1.3.1'
     androidx_version = '1.9.0'
+    espresso_version = '3.5.0'
   }
 } // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
