--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ captures/
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
+.idea/inspectionProfiles/Project_Default.xml
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
