--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/inspectionProfiles/Project_Default.xml
+.idea/deploymentTargetDropDown.xml
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
