--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,9 @@ dependencies {
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
   implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
+  implementation "androidx.navigation:navigation-compose:$nav_version"
   // Dagger/Hilt
+  implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
   implementation "com.google.dagger:hilt-android:2.44"
   kapt "com.google.dagger:hilt-compiler:2.44"
   // Test
