--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
   ext {
     compose_version = '1.3.1'
+    nav_version = '2.5.3'
     androidx_version = '1.9.0'
     espresso_version = '3.5.0'
   }
