--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -35,7 +35,9 @@ dependencies {
   implementation "androidx.core:core-ktx:$androidx_version"
   implementation 'androidx.appcompat:appcompat:1.5.1'
   implementation 'com.google.android.material:material:1.7.0'
+  implementation 'androidx.compose.ui:ui-tooling-preview:1.3.1'
   testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.1.4'
   androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+  debugImplementation 'androidx.compose.ui:ui-tooling:1.3.1'
 }
