--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
   // Dagger/Hilt
   implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
   implementation "com.google.dagger:hilt-android:2.44"
+  implementation project(path: ':common-ui')
   kapt "com.google.dagger:hilt-compiler:2.44"
   // Test
   testImplementation 'junit:junit:4.13.2'
