--- a/feature/login/build.gradle
+++ b/feature/login/build.gradle
@@ -1,6 +1,8 @@
 plugins {
   id 'com.android.library'
   id 'org.jetbrains.kotlin.android'
+  id 'kotlin-kapt'
+  id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -32,9 +34,21 @@ android {
 
 dependencies {
 
+  // Androidx
   implementation "androidx.core:core-ktx:$androidx_version"
-  implementation 'androidx.appcompat:appcompat:1.5.1'
-  implementation 'com.google.android.material:material:1.7.0'
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+  // Compose
+  implementation 'androidx.activity:activity-compose:1.6.1'
+  implementation "androidx.compose.ui:ui:$compose_version"
+  implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+  implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
+  implementation "androidx.navigation:navigation-compose:$nav_version"
+  // Dagger/Hilt
+  implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+  implementation "com.google.dagger:hilt-android:2.44"
+  implementation project(path: ':common-ui')
+  kapt "com.google.dagger:hilt-compiler:2.44"
+  // Test
   testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.1.4'
   androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
