--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
   implementation 'androidx.activity:activity-compose:1.6.1'
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-  implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
+  implementation "androidx.compose.material3:material3:$material_version"
   implementation "androidx.navigation:navigation-compose:$nav_version"
   // Dagger/Hilt
   implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
@@ -65,6 +65,14 @@ dependencies {
   kapt "com.google.dagger:hilt-compiler:2.44"
   // Project Modules
   implementation project(path: ':common-ui')
+  // Window
+  implementation 'androidx.window:window-core:1.1.0-alpha04'
+  implementation "androidx.window:window:1.1.0-alpha04"
+  implementation "androidx.compose.material3:material3-window-size-class:$material_version"
+  // Accompanist
+  implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+  implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
+  implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
   // Test
   testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.1.4'
