--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 buildscript {
   ext {
+    material_version = '1.1.0-alpha02'
     compose_version = '1.3.1'
     nav_version = '2.5.3'
     androidx_version = '1.9.0'
     espresso_version = '3.5.0'
+    accompanist_version = '0.27.0'
   }
 } // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
