--- a/feature/login/build.gradle
+++ b/feature/login/build.gradle
@@ -53,6 +53,10 @@ dependencies {
   implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
   implementation "com.google.dagger:hilt-android:2.44"
   kapt "com.google.dagger:hilt-compiler:2.44"
+  // Accompanist
+  implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+  implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
+  implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
   // Project Modules
   implementation project(path: ':common-ui')
   // Test
