--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -47,7 +47,7 @@ dependencies {
   implementation 'androidx.activity:activity-compose:1.6.1'
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-  implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
+  implementation "androidx.compose.material3:material3:$material_version"
   implementation "androidx.navigation:navigation-compose:$nav_version"
   // Dagger/Hilt
   implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
@@ -57,5 +57,5 @@ dependencies {
   testImplementation 'junit:junit:4.13.2'
   androidTestImplementation 'androidx.test.ext:junit:1.1.4'
   androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
-  debugImplementation 'androidx.compose.ui:ui-tooling:1.3.1'
+  debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
