--- a/feature/login/build.gradle
+++ b/feature/login/build.gradle
@@ -47,7 +47,7 @@ dependencies {
   implementation 'androidx.activity:activity-compose:1.6.1'
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-  implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
+  implementation "androidx.compose.material3:material3:$material_version"
   implementation "androidx.navigation:navigation-compose:$nav_version"
   // Dagger/Hilt
   implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
