--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -7,11 +7,11 @@ plugins {
 
 android {
   namespace 'com.noumenon.common.ui'
-  compileSdk 33
+  compileSdk compile_sdk
 
   defaultConfig {
-    minSdk 28
-    targetSdk 33
+    minSdk min_sdk
+    targetSdk target_sdk
 
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     consumerProguardFiles "consumer-rules.pro"
